fix (hopefully): icon upd

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 </p>
             </div>
             <a href="https://www.instagram.com/">
-                <img class="contact__inst" src="/assets/images/inst2.png" alt="">
+                <img class="contact__inst" src="./assets/images/inst2.png" alt="">
             </a>
         </article>
     </main>
