--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="./pages/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <!-- <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
@@ -19,44 +21,45 @@
 
     <main class="main">
         <article class="hero">
-            <!-- <h1 class="hero__h1">
-                Greenwich
-            <h1> -->
             <h2 class="hero__h2">
                 Bespoke art-driven brand solutions
             </h2>
         </article>
 
-        <article class="mission">
+        <h2 class="hero__h2_type_mobile" data-aos="fade-up">
+            Bespoke art-driven brand solutions
+        </h2>
+
+        <article class="mission ">
             <div class="mission__column">
-                <p class="mission__text_type_big">
+                <p class="mission__text_type_big" data-aos="fade-right">
                     By partnering with brands & companies, we aim to make contemporary art more accessible and more widely shared around the world, while:
                 </p>
             </div>
             <div class="mission__column">
                 <ul class="mission__list">
                     <li class="mission__list-item">
-                        <p class="mission__text_type_small">
+                        <p class="mission__text_type_small" data-aos="fade-left">
                             Getting you closer to your targeted audience
                         </p>
                     </li>
                     <li class="mission__list-item">
-                        <p class="mission__text_type_small">
+                        <p class="mission__text_type_small" data-aos="fade-left">
                             Enhancing your visibility
                         </p>
                     </li>
                     <li class="mission__list-item">
-                        <p class="mission__text_type_small">
+                        <p class="mission__text_type_small" data-aos="fade-left">
                             Elevating your brand
                         </p>
                     </li>
                     <li class="mission__list-item">
-                        <p class="mission__text_type_small">
+                        <p class="mission__text_type_small" data-aos="fade-left">
                             Develop an increasingly more creativework environment, leading to a more motivated staff
                         </p>
                     </li>
                     <li class="mission__list-item">
-                        <p class="mission__text_type_small">
+                        <p class="mission__text_type_small" data-aos="fade-left">
                             Shedding a newlight on your positioning
                         </p>
                     </li>
@@ -74,24 +77,24 @@
             </div>
             <div class="services__column-container">
                 <div class="services__column">
-                    <p class="services__text_type_big">
+                    <p class="services__text_type_big" data-aos="fade-down">
                         To create awareness to the company’s endeavour, our services include but are not limited to: 
                     </p>
                 </div>
                 <div class="services__column">
-                    <ul class="services__list">
+                    <ul class="services__list ">
                         <li class="services__list-item">
-                            <p class="services__text_type_small">
+                            <p class="services__text_type_small" data-aos="fade-left">
                                 Implementing an art program: exhibition or events with emerging to established artists
                             </p>
                         </li>
                         <li class="services__list-item">
-                            <p class="services__text_type_small">
+                            <p class="services__text_type_small" data-aos="fade-left">
                                 Intermediating sponsorships to support the project
                             </p>
                         </li>
                         <li class="services__list-item">
-                            <p class="services__text_type_small">
+                            <p class="services__text_type_small" data-aos="fade-left">
                                 Providing advisory services to building an art collection.
                             </p>
                         </li>
@@ -99,7 +102,7 @@
                 </div>
             </div>
             <div class="services__additional">
-                <p class="services__text_type_big">
+                <p class="services__text_type_big" data-aos="fade-up">
                     We propose solutions that span across all media to adapt to the sites & budgets, such as murals, paintings, sculpture, photography, to more contemporary and/or technological like digital art, installations, video, light installations, performance. 
                 </p>
             </div>
@@ -115,49 +118,49 @@
             </div>
             <div class="world__column-container">
                 <div class="world__column">
-                    <p class="world__text_type_big">
+                    <p class="world__text_type_big" data-aos="fade-right">
                         Our vast network of artists, brands and curators extends itself across: 
                     </p>
                 </div>
                 <div class="world__column">
                     <ul class="world__list">
                         <li class="world__list-item">
-                            <p class="world__text_type_small">
+                            <p class="world__text_type_small uk" data-aos="fade-right">
                                 UK
                             </p>
                         </li>
                         <li class="world__list-item">
-                            <p class="world__text_type_small">
+                            <p class="world__text_type_small fr" data-aos="fade-right">
                                 France
                             </p>
                         </li>
                         <li class="world__list-item">
-                            <p class="world__text_type_small">
+                            <p class="world__text_type_small sw" data-aos="fade-left">
                                 Switzerland
                             </p>
                         </li>
                         <li class="world__list-item">
-                            <p class="world__text_type_small">
+                            <p class="world__text_type_small po" data-aos="fade-right">
                                 Portugal
                             </p>
                         </li>
                         <li class="world__list-item">
-                            <p class="world__text_type_small">
+                            <p class="world__text_type_small br" data-aos="fade-left">
                                 Brazil
                             </p>
                         </li>
                         <li class="world__list-item">
-                            <p class="world__text_type_small">
+                            <p class="world__text_type_small au" data-aos="fade-right">
                                 Australia
                             </p>
                         </li>
                         <li class="world__list-item">
-                            <p class="world__text_type_small">
+                            <p class="world__text_type_small be" data-aos="fade-left">
                                 Belgium
                             </p>
                         </li>
                         <li class="world__list-item">
-                            <p class="world__text_type_small">
+                            <p class="world__text_type_small me" data-aos="fade-right">
                                 Mexico
                             </p>
                         </li>
@@ -175,7 +178,7 @@
                 </h3>
             </div>
             <div class="about__info">
-                <p class="about__info-text">
+                <p class="about__info-text" data-aos="fade-up">
                     Established in 2021, Greenwich Cultural Services was born from a desire to bring art and artists to a wider audience.  We believe that culture is paramount to civilisation and that visual art is one of the most important modes of expression available to us. 
                     <br>
                     <br>
@@ -192,24 +195,24 @@
         <article class="team">
             <div class="team__column-container">
                 <div class="team__column">
-                    <p class="team__text_type_big">
+                    <p class="team__text_type_big" data-aos="fade-up">
                         Marisa <br> Bellani
                     </p>
                 </div>
                 <div class="team__column">
-                    <p class="team__text_type_small">
+                    <p class="team__text_type_small" data-aos="fade-left">
                         Marisa is the founder and creative director of Roman Road, a contemporary art gallery in London. The gallery has recently redefined itself with a more fluid and ethical approach, becoming a platform for collaborative exhibitions in 2019. Since 2020, Marisa has organised art residencies in London. She has been running the company since 2013, following and fostering notable projects and dealing with artists all over the world. Roman Road has established a qualitative and thematic programme and realised the creation of a research cell and Roman Road Journal in 2018, an online platform dedicated to publishing articles and exploring topics on art, science, technology, anthropology and literature. Marisa has completed two master degree courses, first at the Institut d’Études Supérieures des Arts and subsequently at Sotheby’s Institute of Art. She has held a seat and became the youngest member of one of the Tate’s Acquisition Committees and regularly participates in panel discussions and portfolio reviews, and gives talks at art universities.
                     </p>
                 </div>
             </div>
             <div class="team__column-container">
                 <div class="team__column">
-                    <p class="team__text_type_big">
+                    <p class="team__text_type_big" data-aos="fade-right">
                         Rita <br> Almeida <br> Freitas
                     </p>
                 </div>
                 <div class="team__column">
-                    <p class="team__text_type_small">
+                    <p class="team__text_type_small" data-aos="fade-up">
                         Rita is a Lisbon-based art advisor working for a diverse range of clients worldwide. Before co-founding Imaginalis, Rita previously worked at Phillips de Pury (London) and Serralves Foundation, was a nominator for the FT Oppenheimer Funds Emerging Voices Award and has collaborated with ARCO art fair as a collector's liaison. Rita is also the co-founder of The SPOT: Sculpture Park and Outdoor Tendencies and a guest lecturer in the Art Market Post-Graduate program at Universidade Nova (Lisboa). Rita has completed her Business and Administration degree at the Católica Business School and her Masters at Sotheby’s Institute of Art (Art Business) and Christie’s Education (Post-war and Contemporary Art). The years spent in Paris, London and São Paulo allied to her extensive travels have provided her an excellent worldwide network, including private collectors, art dealers, curators and artists, therefore offering a privileged access to distinct art market sectors.
                     </p>
                 </div>
@@ -218,10 +221,10 @@
 
         <article class="contact">
             <div class="contact__column">
-                <p class="contact__text_type_big">
+                <p class="contact__text_type_big" data-aos="fade-left">
                     Contact us
                 </p>
-                <p class="contact__text_type_small">
+                <p class="contact__text_type_small" data-aos="fade-up">
                     To enquire about our services <br>
                     and fees, please contact us!
                     <br> 
@@ -230,10 +233,13 @@
                 </p>
             </div>
             <a href="https://www.instagram.com/">
-                <img class="contact__inst" src="./assets/images/inst2.png" alt="">
+                <img class="contact__inst" src="./assets/images/inst2.png" alt="" data-aos="fade-up">
             </a>
         </article>
     </main>
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
