fix: added new stuff + styles && minor bug fixed

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                     Greenwich <br> <span>Cultural Services</span> 
                 </h1>
                 <h2 class="hero__h2">
-                    Brand activation <br> through art
+                    Brand activation through art
                 </h2>
             </div>
             <img id="hero__logo" class="hero__image" src="./assets/images/hero__logo.svg" alt="">
-            <a  href="#about">
+            <a href="#about">
                 <img id="hero__about" class="hero__image" src="./assets/images/hero__about.svg" alt="">
             </a>
-            <a  href="#contact">
+            <a href="#contact">
                 <img id="hero__contact" class="hero__image" src="./assets/images/hero__contact.svg" alt="">
             </a>
             <div class="hero__red-container">
@@ -47,7 +47,7 @@
             <div class="article__column-container">
                 <div class="article__column">
                     <h3 class="article__h3">
-                        Needs <br> a title
+                        What <br> we do
                     </h3>
                 </div>
                 <div class="article__column">
@@ -89,7 +89,7 @@
             <div class="article__column-container">
                 <div class="article__column">
                     <h3 class="article__h3">
-                        Our <br> services
+                        OUR SERVICES
                     </h3>
                 </div>
                 <div class="article__column">
@@ -126,6 +126,7 @@
                     <h3 class="article__h3">
                         Our world
                     </h3>
+                    <!-- <img id="aim__header" class="article__h3-image article__h3-image_mobile" src="./assets/images/world__header[d].svg" alt=""> -->
                 </div>
                 <div class="article__column">
                     <p class="article__text_type_small" data-aos="fade-right">
@@ -183,6 +184,7 @@
                     <h3 class="article__h3">
                         About us
                     </h3>
+                    <!-- <img id="aim__header" class="article__h3-image article__h3-image_mobile " src="./assets/images/about__header[d].svg" alt=""> -->
                 </div>
                 <div class="article__column">
                     <p class="article__text_type_small">
@@ -249,9 +251,7 @@
             </article>
             <article class="article contact__article">
                 <a href="https://www.instagram.com/">
-                    <h3 class="article__h3 contact__h3">
-                        IG
-                    </h3> 
+                    <img src="./assets/images/inst.svg" alt="">
                 </a>
             </article>
         </article>
@@ -268,8 +268,9 @@
                 </div>
                 <div class="article__column">
                     <p class="article__text_type_small">
-                        (c) 2022 Greenwich Cultural Services.  <br>
-                        All Right reserved. 
+                        © 2022 Greenwich Cultural Services.  
+                        <br>
+                        All Rights Reserved.
                     </p>
                 </div>
             </div>
